Require click & hold to draw over the canvas now

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 <h1>Etch A Sketch!</h1>
                 <p>
                     The canvas to the right is yours to manipulate. Use your
-                    mouse and the options available below to fill up the grid
-                    with your imagination. Go wild!
+                    mouse (click and hold) and the options available below to
+                    fill up the grid with your imagination. Go wild!
                 </p>
                 <div id="options">
                     <span>Size:</span>
